--- a/metadata.yaml
+++ b/metadata.yaml
@@ -29,5 +29,6 @@ subjects:
 - !lcsh 'Rodney, Caesar, 1728-1784 -- Drama'
 - !lcsh 'Radio plays'
 - !lcc 'PN'
+- GITenberg
 title: Caesar Rodney's Ride
 url: http://www.gutenberg.org/ebooks/28051
